--- a/src/app/components/event-chat/event-chat.component.scss
+++ b/src/app/components/event-chat/event-chat.component.scss
@@ -11,7 +11,7 @@ p, span {
     margin-bottom: 10px;
 }
 .textarea {
-    width: 290px;
+    width: 346px;
 }
 .icon__send {
     border: none;
@@ -34,22 +34,21 @@ p, span {
     margin: 5px 0;
     border-radius: 5px 5px 5px 0px;
     display: inline-block;
-    padding: 5px 10px;
+    padding: 4px 10px;
     cursor: pointer;
     max-width: 300px;
 }
 .user__comment {
-    font-size: 14px;
+    font-size: 12px;
     color: $dark;
 }
 .text__comment {
     font-size: 20px;
-    padding: 5px 0px;
     color: $light;
 }
 .time__comment {
     text-align: end;
-    font-size: 14px;
+    font-size: 12px;
     color: $dark;
 }
 .flex {
@@ -59,8 +58,7 @@ p, span {
 .avatar {
     width: 50px;
     height: 50px;
-    border: 1px solid $dark;
-    border-radius: 50%;
+    border-radius: 5px;
     background-color: $light;
     margin: 0 5px 0 0;
 }
