--- a/src/app/components/event/event.component.scss
+++ b/src/app/components/event/event.component.scss
@@ -9,253 +9,122 @@ p, span {
     display: flex;
     justify-content: space-between;
 }
-.data {
-    width: 100%;
-    background-color: $lightdark;
-    margin-right: 20px;
-    min-width: 580px;
+.cell {
+    width: 360px;
+    height: 160px;
+    background: #37474F;
+    border: 1px solid #CFD8DC;
+    border-radius: 5px;
+    padding: 15px;
+    margin-bottom: 30px;
 }
-.data__content {
-    padding: 0 20px;
+.subtitle {
+    font-size: 20px;
+    color: #607D8B;
 }
-.data__flex_id {
-    display: flex;
-    justify-content: flex-end;
+.title {
+    font-size: 20px;
+    color: #FFFFFF;
 }
-.data__box_id {
+.price {
     position: relative;
-    width: 120px;
-    height: 0;
-	border-top: 40px solid $blue; 
-	border-left: 30px solid transparent;
-}
-.data__id {
-    position: absolute;
-    top: -39px;
-    left: 22px;
+    font-weight: 700;
     font-size: 32px;
-    color: $light;
-    z-index: 100;
+    color: #00C853;
 }
-.data__flex {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 20px;
+.ruble {
+    position: absolute;
+    top: 4px;
+    left: -27px;
+    font-size: 29px;
+    font-weight: 700;
 }
-.data__title {
-    font-size: 48px;
-    color: $light;
-    span {
-        font-size: 48px;
-        color: #48FFB4;
-    }
-}
-.data__title_time {
-    color: $light;
-    font-size: 64px;
-    font-weight: bold;
-}
-.data__subtitle {
-    font-size: 24px;
-    color: $light;
-    span {
-        font-size: 24px;
-        color: #48FFB4;
-    }
-}
-.data__subtitle_map {
-    font-size: 24px;
-    color: $light;
-    cursor: pointer;
-}
-.data__subtitle_map:hover {
-    color: $blue;
-}
-.data__flex_status {
-    display: flex;
-    justify-content: center;
-}
-.data__description {
-    font-size: 24px;
-    color: $light;
-    text-align: end;
-}
-.vote {
-    width: 320px;
-}
-.vote__box {
-    height: 340px;
-    border: 1px solid $blue;
-    background-color: $lightdark;
-}
-.vote__head_title {
+.time {
+    font-weight: 700;
     font-size: 36px;
-    color: $light;
-    padding: 10px;
+    color: #FFFFFF;
     text-align: center;
 }
-.vote__box_text {
-    margin: 0 5px;
-}
-.vote__title {
-    margin: 10px 0;
-    font-size: 20px;
-    color: $light;
-}
-.vote__subtitle {
-    font-size: 20px;
-    color: $light;
-}
-.vote__box_btns {
-    display: flex;
-    justify-content: space-between;
-}
-.vote__btn_accept {
-    height: 50px;
-    width: 185px;
-    margin: 2px;
-    color: $dark;
+.date {
+    font-weight: 700;
     font-size: 24px;
+    color: #FFFFFF;
+    text-align: center;
+}
+.address {
+    font-size: 20px;
+    color: #FFFFFF;
+    margin-top: 25px;
+}
+.accept {
+    width: 190px;
+    height: 40px;
+    background: #00C853;
+    border-radius: 5px;
+    font-size: 20px;
+    color: #FFFFFF;
     border: none;
     cursor: pointer;
-    background-color: #48FFB4;
 }
-.vote__btn_refuse {
-    height: 50px;
-    width: 185px;
-    margin: 2px;
-    color: $dark;
-    font-size: 24px;
+.reject {
+    width: 190px;
+    height: 40px;
+    background: #D50000;
+    border-radius: 5px;
+    font-size: 20px;
+    color: #FFFFFF;
     border: none;
     cursor: pointer;
-    background-color: #FF5050;
-}
-.vote__btn_mute {
-    background-color: #9E9E9E;
-    cursor: default;
-}
-.participants__box_btns {
-    display: flex;
-    margin: 10px 0;
-}
-.participants__btn {
-    width: 250px;
-    height: 47px;
-    font-size: 36px;
-    border: none;
-    cursor: pointer;
-    color: $light;
-    background-color: $lightdark;
-    margin-right: 20px;
-    font-weight: bold;
-    font-style: italic;
-}
-.participants__btn_active {
-    background-color: $blue;
-}
-.participants__data {
-    display: flex;
-}
-.participants__filters {
-    display: flex;
-    flex-direction: column;
-}
-.participants__btn_filter {
-    display: flex;
-    align-items: center;
-    padding-left: 23px;
-    width: 350px;
-    height: 68px;
-    background-color: $lightdark;
-    font-size: 36px;
-    font-weight: bold;
-    font-style: italic;
-    color: $light;
-    border: none;
-    margin: 0 10px 5px 0;
-    cursor: pointer;
-    span {
-        color: $light;
-    }
-}
-.active_filter {
-    background-color: $blue;
-}
-.participants__list {
-    max-height: 360px;
-    overflow: auto;
-}
-.participants__list::-webkit-scrollbar {
-    width: 8px;
-}
-.participants__list::-webkit-scrollbar {
-    height: 5px;
-    background-color: $dark;
-}
-.participants__list::-webkit-scrollbar-thumb {
-    background-color: $light;
-    border-radius: 0;
 }
 .participants__cell {
+    width: 372px;
+    height: 60px;
+    background: #CFD8DC;
+    border-radius: 5px;
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    width: 430px;
-    height: 68px;
-    background: linear-gradient(to right, $blue 15%, $light 15% 98%, $blue 98%);
-    margin-bottom: 5px;
+    padding: 0 10px;
+    margin-bottom: 10px;
     cursor: pointer;
 }
-.participants__cell:last-child {
-    margin: 0;
+.participants__flex {
+    display: flex;
+    align-items: center;
 }
-.participants__avatar {
-    width: 50px;
-    height: 50px;
-    border: 1px solid $dark;
-    border-radius: 50%;
-    background-color: $light;
-    margin: 0 5px 0 43px;
-}
-.participants__status {
-    font-size: 20px;
-    color: $dark;
-}
-.participants__name {
+.participants__icon {
     font-size: 24px;
-    color: $dark;
+    color: #000000;
+    margin-right: 10px;
 }
-.participants__cell:hover .participants__status {
-    color: $dark;
+.participants__title {
+    font-size: 24px;
+    color: #000000;
 }
-.participants__cell:hover .participants__name {
-    color: $dark;
+.participants__count {
+    font-size: 24px;
+    color: #000000;
 }
-.user {
-    margin-left: 20px;
-    width: 320px;
-    height: 365px;
-    background-color: $lightdark;
+.profile {
+    width: 372px;
+    height: 60px;
+    background: #CFD8DC;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    padding: 0 10px;
+    margin-bottom: 10px;
+    cursor: pointer;
 }
-.user__status {
-    color: $light;
-    font-size: 32px;
-    text-align: center;
+.profile__avatar {
+    width: 40px;
+    height: 40px;
+    border-radius: 5px;
+    margin-right: 10px;
 }
-.user__name {
-    color: $light;
-    font-size: 40px;
-    text-align: center;
-}
-.user__avatar {
-    width: 200px;
-    height: 200px;
-    background-color: $light;
-    margin: 20px auto;
-}
-.user__title {
-    color: $light;
-    font-size: 36px;
-    letter-spacing: 0;
+.profile__name {
+    font-size: 24px;
+    color: #000000;
 }
 .spinner {
     position: absolute;
@@ -265,146 +134,4 @@ p, span {
     justify-content: center;
     align-items: center;
     z-index: 101;
-}
-
-.data-mobile {
-    display: none;
-    background-color: $lightdark;
-    width: 300px;
-}
-.data__subtitle_map-mobile {
-    font-size: 20px;
-    color: $light;
-    cursor: pointer;
-}
-.data__subtitle_map-mobile:hover {
-    color: $blue;
-}
-.data__box_id-mobile {
-    position: relative;
-    width: 80px;
-    height: 0;
-	border-top: 40px solid $blue; 
-	border-left: 30px solid transparent;
-}
-.data__id-mobile {
-    position: absolute;
-    top: -32px;
-    left: 8px;
-    font-size: 20px;
-    color: $light;
-    z-index: 100;
-}
-.data__title-mobile {
-    font-size: 20px;
-    color: $light;
-    span {
-        font-size: 20px;
-        color: #48FFB4;
-    }
-}
-.data__subtitle-mobile {
-    font-size: 16px;
-    color: $light;
-    span {
-        font-size: 16px;
-        color: #48FFB4;
-    }
-}
-.data__title_time-mobile {
-    color: $light;
-    font-size: 48px;
-    font-weight: bold;
-    text-align: center;
-}
-.data__content-mobile {
-    padding: 0 10px;
-}
-@media(max-width: 1110px){
-    .data__content {
-        padding: 0 10px;
-    }
-    .data__title {
-        font-size: 40px;
-        span {
-            font-size: 40px;
-        }
-    }
-    .data__title_time {
-        font-size: 48px;
-    }
-    .data__subtitle {
-        font-size: 20px;
-        span {
-            font-size: 20px;
-        }
-    }
-    .data__subtitle_map {
-        font-size: 20px;
-    }
-    .data__description {
-        font-size: 20px;
-    }
-    .user {
-        display: none;
-    }
-}
-@media(max-width: 950px){
-    .flex {
-        flex-wrap: wrap;
-    }
-    .data {
-        margin-right: 0;
-    }
-    .vote__box {
-        display: none;
-    }
-}
-@media(max-width: 840px){
-    .participants__btn {
-        max-width: 200px;
-        height: 47px;
-        font-size: 32px;
-        margin-right: 10px;
-    }
-    .participants__cell {
-        width: 330px;
-    }
-    .participants__btn_filter {
-        padding-left: 23px;
-        width: 300px;
-        height: 68px;
-        font-size: 32px;
-        margin: 0 10px 5px 0;
-    }
-}
-@media(max-width: 670px){
-    .participants__container {
-        display: none;
-    }
-    .participants__btn {
-        font-size: 24px;
-        margin-right: 5px;
-    }
-    .data-mobile {
-        display: block;
-    }
-    .data {
-        display: none;
-    }
-}
-@media(max-width: 480px){
-    .participants__btn {
-        font-size: 20px;
-    }
-    .vote__btn_accept {
-        width: 140px;
-    }
-    .vote__btn_refuse {
-        width: 140px;
-    }
-    .participants__btn_filter {
-        width: 280px;
-        font-size: 24px;
-    }
 }
