--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,13 +21,14 @@ $theme: mat-light-theme($primary, $warn);
 
 
 @import '~ngx-toastr/toastr';
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,400;0,700;1,700&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,400;0,700;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 $light: #FFFFFF;
 $dark: #212121;
 $blue: #2196F3;
 $lightdark: #4D61A6;
 * {
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
 }
@@ -44,27 +45,17 @@ html, body {
         border-radius: 4px;
     }
 }
-h1 {
-    font-size: 48px;
-    user-select: none;
-}
 .container {
     max-width: 1200px;
     margin: 50px auto 0 auto;
     padding: 0 10px;
 }
 @media(max-width: 768px){
-    h1 {
-        font-size: 36px;
-    }
     .container {
         margin: 30px auto 10px auto;
     }
 }
 @media(max-width: 360px){
-    h1 {
-        font-size: 24px;
-    }
     .container {
         margin: 10px auto;
     }
