--- a/src/app/components/event/event.component.html
+++ b/src/app/components/event/event.component.html
@@ -1,19 +1,19 @@
 <div class="container">
     <div class="flex">
-        <div class="cell">
-            <div class="flex">
+        <div class="cell" style="display: flex; flex-direction: column; justify-content: space-between;">
+            <div class="flex" style="padding: 5px 0;">
                 <p class="subtitle">Идентификатор:</p>
                 <p class="title">#{{event?.id}}</p>
             </div>
-            <div class="flex">
+            <div class="flex" style="padding: 5px 0;">
                 <p class="subtitle">Вид спорта:</p>
                 <p class="title">{{event?.sport.name}}</p>
             </div>
-            <div class="flex">
+            <div class="flex" style="padding: 5px 0;">
                 <p class="subtitle">Статус события</p>
                 <p class="title">{{event?.status.name}}</p>
             </div>
-            <div class="flex">
+            <div class="flex" style="padding: 5px 0;">
                 <p class="subtitle">Тип события:</p>
                 <p class="title">{{event?.type.name}}</p>
             </div>
@@ -33,8 +33,8 @@
             <p class="date">{{event?.full_date}}</p>
             <p class="address" (click)="openDialog()">{{event?.location.address}}</p>
         </div>
-        <div class="cell">
-            <div class="flex">
+        <div class="cell" style="position: relative;">
+            <div class="flex" style="position: absolute; bottom: 0; left: 0;">
                 <button class="accept" (click)="sendAccept()">Принять</button>
                 <button class="reject" (click)="sendReject()">Отказать</button>
             </div>
@@ -44,7 +44,7 @@
     <div class="flex">
 
         <div>
-            <div class="participants__cell" (click)="viewAccepted()">
+            <div class="participants__cell" (click)="viewAccepted()" [ngClass]="{participants__cell_active: view.accepted}">
                 <div class="participants__flex">
                     <mat-icon class="participants__icon">done</mat-icon>
                     <p class="participants__title">Участники</p>
@@ -52,7 +52,7 @@
                 <p class="participants__count">{{statistics?.applications.accepted}}</p>
             </div>
 
-            <div class="participants__cell" (click)="viewGuests()">
+            <div class="participants__cell" (click)="viewGuests()" [ngClass]="{participants__cell_active: view.guests}">
                 <div class="participants__flex">
                     <mat-icon class="participants__icon">groups</mat-icon>
                     <p class="participants__title">Гости</p>
@@ -60,7 +60,7 @@
                 <p class="participants__count">{{statistics?.guests_stats.all}}</p>
             </div>
 
-            <div class="participants__cell" (click)="viewRefused()">
+            <div class="participants__cell" (click)="viewRefused()" [ngClass]="{participants__cell_active: view.refused}">
                 <div class="participants__flex">
                     <mat-icon class="participants__icon">close</mat-icon>
                     <p class="participants__title">Не придут</p>
@@ -68,7 +68,7 @@
                 <p class="participants__count">{{statistics?.applications.refused}}</p>
             </div>
 
-            <div class="participants__cell" (click)="viewInvited()">
+            <div class="participants__cell" (click)="viewInvited()" [ngClass]="{participants__cell_active: view.invited}">
                 <div class="participants__flex">
                     <mat-icon class="participants__icon">mark_email_unread</mat-icon>
                     <p class="participants__title">Приглашены</p>
@@ -76,7 +76,7 @@
                 <p class="participants__count">{{statistics?.applications.invited}}</p>
             </div>
 
-            <div class="participants__cell" (click)="viewRejected()">
+            <div class="participants__cell" (click)="viewRejected()" [ngClass]="{participants__cell_active: view.rejected}">
                 <div class="participants__flex">
                     <mat-icon class="participants__icon">pan_tool</mat-icon>
                     <p class="participants__title">Отклонены</p>
