--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -27,7 +27,7 @@ ng-sidebar-container {
 .burger__avatar {
     width: 50px;
     height: 50px;
-    border-radius: 50%;
+    border-radius: 5px;
     background-color: $blue;
     margin: 10px 10px 10px 0;
 }
@@ -66,7 +66,7 @@ ng-sidebar-container {
 	width: 30px;
     height: 30px;
     top: 20px;
-    right: 30px;
+    left: 30px;
     position: fixed;
     outline: none;
     border: none;
@@ -78,7 +78,7 @@ ng-sidebar-container {
     top: 15px;
     width: 30px;
     height: 5px;
-    background-color: $lightdark;
+    background-color: $light;
     border-radius: 25%;
     opacity: 100;
     transform: translateX(0);
@@ -90,7 +90,7 @@ ng-sidebar-container {
     top: 15px;
     width: 30px;
     height: 5px;
-    background-color: $lightdark;
+    background-color: $light;
     border-radius: 25%;
     opacity: 0;
     transform: translateX(40px);
@@ -102,7 +102,7 @@ ng-sidebar-container {
     top: 15px;
     width: 30px;
     height: 5px;
-    background-color: $lightdark;
+    background-color: $light;
     border-radius: 25%;
     opacity: 100;
     transform: translateX(0);
@@ -114,7 +114,7 @@ ng-sidebar-container {
     top: 15px;
     width: 30px;
     height: 5px;
-    background-color: $lightdark;
+    background-color: $light;
     border-radius: 25%;
     opacity: 0;
     transform: translateX(-40px);
@@ -188,19 +188,40 @@ ng-sidebar-container {
     padding: 8px 20px 8px 0;
     white-space: nowrap;
 }
+.link:hover {
+    color: #ECEFF1;
+}
 .active {
     color: $dark;
+}
+.active:hover {
+    color: #263238;
+}
+.city {
+    cursor: pointer;
+    color: $light; 
+    font-size: 18px; 
+    text-decoration: underline;
+}
+.city:hover {
+    color: #ECEFF1;
+}
+.icon {
+    color: $light;
+    cursor: pointer;
+}
+.icon:hover {
+    color: #ECEFF1;
 }
 .box {
     display: flex;
     justify-content: flex-end;
     align-items: center;
 }
-.version {
-    font-size: 14px;
-    color: $light;
-    margin-right: 10px;
-    user-select: none;
+.box:hover {
+    .phone {
+        color: #ECEFF1;
+    }
 }
 .avatar {
     width: 50px;
@@ -217,11 +238,6 @@ ng-sidebar-container {
 .login {
     color: $light;
 }
-.logout {
-    color: $light; 
-    cursor: pointer; 
-    margin-left: 10px;
-}
 .router-outlet {
     position: fixed;
     top: 78px; left: 0; right: 0; bottom: 0;
@@ -230,27 +246,23 @@ ng-sidebar-container {
     height: 100%;
     overflow: auto;
 }
-@media(max-width: 1100px){
-    .version {
-        display: none;
-    }
-}
-@media(max-width: 960px){
-    .phone {
-        display: none;
+@media(max-width: 1000px){
+    .link {
+        font-size: 36px;
     }
 }
 @media(max-width: 850px){
+    .box {
+        display: none;
+    }
     .link {
         display: none;
     }
     .burger {
         display: block;
     }
-    .avatar {
-        display: none;
-    }
-    .logout {
-        display: none;
-    }
+}
+
+::ng-deep.cdk-overlay-pane  {
+    max-width: 100vw !important;
 }
