--- a/src/app/components/map/dialog-events.component.html
+++ b/src/app/components/map/dialog-events.component.html
@@ -1,8 +1,8 @@
 <mat-dialog-content class="mat-typography">
   <div class="flex">
-    <div>
+    <div style="margin-right: 10px;">
       <image-carousel-service-page *ngIf="data.location.images.length" [width]="300" [height]="200" [speed]="0.5" [images]="data.location.images"></image-carousel-service-page>
-      <p>Адрес: {{data.location.address}}</p>
+      <p style="margin-top: 10px;">Адрес: {{data.location.address}}</p>
       <p>Название: {{data.location.name}}</p>
       <p>Описание: {{data.location.description}}</p>
       <button *ngIf="isAuth" mat-raised-button color="primary" class="btn" (click)="openDialog(data.location.id)" mat-dialog-close>Добавить событие</button>
